--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
-requests
-beautifulsoup4
-PyYAML
-python-dotenv
-pandas
-openpyxl>=3.1.5
-# python-telegram-bot>=21.0
-# SQLAlchemy>=2.0
+beautifulsoup4==4.14.2
+certifi==2025.8.3
+charset-normalizer==3.4.3
+et_xmlfile==2.0.0
+idna==3.10
+numpy==2.3.3
+openpyxl==3.1.5
+pandas==2.3.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+pytz==2025.2
+PyYAML==6.0.3
+requests==2.32.5
+setuptools==78.1.1
+six==1.17.0
+soupsieve==2.8
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+wheel==0.45.1
