--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ requests==2.32.5
 setuptools==78.1.1
 six==1.17.0
 soupsieve==2.8
+tqdm==4.67.1
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
